listing categories, fixing some layout issues, creating pagination display amount button

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   --pressed-button: #0B1A8E;
   --gray: #bbb;
   --secondary-gray: #F2F3F8;
+  --link-color: #5062F0;
 }
 
 table{
